force-app/main/default/objects/A_Testing_Data__c/A_Testing_Data__c.object-meta.xml
<CustomObject>
    <label>A  testing Data</label>
    <nameField>
        <label>A Data testing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A testingsdatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>