force-app/main/default/objects/A_Testing_Data__c/fields/Industry_code_ANZSIC06__c.field-meta.xml
<CustomField>
    <fullName>Industry_code_ANZSIC06__c</fullName>
    <label>Industry_code_ANZSIC06</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>