force-app/main/default/objects/A_Testing_Data__c/fields/Industry_code_NZSIOC__c.field-meta.xml
<CustomField>
    <fullName>Industry_code_NZSIOC__c</fullName>
    <label>Industry_code_NZSIOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>