force-app/main/default/objects/A_Testing_Data__c/fields/Industry_name_NZSIOC__c.field-meta.xml
<CustomField>
    <fullName>Industry_name_NZSIOC__c</fullName>
    <label>Industry_name_NZSIOC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>