force-app/main/default/objects/A_Testing_Data__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>