force-app/main/default/objects/A_Testing_Data__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>