force-app/main/default/objects/A_Testing_Data__c/fields/Variable_category__c.field-meta.xml
<CustomField>
    <fullName>Variable_category__c</fullName>
    <label>Variable_category</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>