force-app/main/default/objects/A_Testing_Data__c/fields/Variable_code__c.field-meta.xml
<CustomField>
    <fullName>Variable_code__c</fullName>
    <label>Variable_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>