force-app/main/default/objects/A_Testing_Data__c/fields/Variable_name__c.field-meta.xml
<CustomField>
    <fullName>Variable_name__c</fullName>
    <label>Variable_name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>